// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
    <div />
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={2000}
      createdAt={0}
      description="Milk"
      id="1"
      key="1"
      note=""
    />
    <ExpenseListItem
      amount={790000}
      createdAt={-345600000}
      description="Rent"
      id="2"
      key="2"
      note="Last months rent"
    />
    <ExpenseListItem
      amount={5500}
      createdAt={345600000}
      description="New Keys for apartment"
      id="3"
      key="3"
      note=""
    />
  </div>
</div>
`;

exports[`should render ExpenseList with no expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
    <div />
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item--message"
    >
      <span>
        No expenses
      </span>
    </div>
  </div>
</div>
`;
